AsyncSyntaxHighlighterImpl overview