@@ -22,82 +22,79 @@ import org.fxmisc.richtext.CodeArea;
 import org.fxmisc.richtext.model.StyleSpans;
 import org.fxmisc.richtext.model.StyleSpansBuilder;
 import org.reactfx.Subscription;
+import org.reactfx.util.Try;
 
 import java.time.Duration;
 import java.util.Collection;
-import java.util.Collections;
-import java.util.Optional;
+import java.util.List;
+import java.util.Map;
 import java.util.concurrent.ExecutorService;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
+import static academy.devonline.javamm.code.syntax.Keywords.KEYWORDS;
+import static java.lang.String.format;
+import static java.lang.String.join;
+import static java.util.Map.entry;
+import static java.util.stream.Collectors.joining;
+
 /**
- * Copied from https://github.com/FXMisc/RichTextFX/blob/master/richtextfx-demos/src/main/java/org/fxmisc/richtext/demo/JavaKeywordsAsyncDemo.java
+ * Copied from
+ * https://github.com/FXMisc/RichTextFX/blob/master/richtextfx-demos/src/main/java/org/fxmisc/richtext/demo/JavaKeywordsAsyncDemo.java
  *
  * @author devonline
  * @link http://devonline.academy/javamm
  */
 public class AsyncSyntaxHighlighterImpl implements AsyncSyntaxHighlighter {
 
-    private static final String[] KEYWORDS = new String[] {
-        "abstract", "assert", "boolean", "break", "byte",
-        "case", "catch", "char", "class", "const",
-        "continue", "default", "do", "double", "else",
-        "enum", "extends", "final", "finally", "float",
-        "for", "goto", "if", "implements", "import",
-        "instanceof", "int", "interface", "long", "native",
-        "new", "package", "private", "protected", "public",
-        "return", "short", "static", "strictfp", "super",
-        "switch", "synchronized", "this", "throw", "throws",
-        "transient", "try", "void", "volatile", "while"
-    };
-
-    private static final String KEYWORD_PATTERN = "\\b(" + String.join("|", KEYWORDS) + ")\\b";
-
-    private static final String PAREN_PATTERN = "\\(|\\)";
-
-    private static final String BRACE_PATTERN = "\\{|\\}";
-
-    private static final String BRACKET_PATTERN = "\\[|\\]";
-
-    private static final String SEMICOLON_PATTERN = "\\;";
-
-    private static final String STRING_PATTERN = "\"([^\"\\\\]|\\\\.)*\"";
-
-    private static final String COMMENT_PATTERN = "//[^\n]*" + "|" + "/\\*(.|\\R)*?\\*/";
-
-    private static final Pattern PATTERN = Pattern.compile(
-        "(?<KEYWORD>" + KEYWORD_PATTERN + ")"
-            + "|(?<PAREN>" + PAREN_PATTERN + ")"
-            + "|(?<BRACE>" + BRACE_PATTERN + ")"
-            + "|(?<BRACKET>" + BRACKET_PATTERN + ")"
-            + "|(?<SEMICOLON>" + SEMICOLON_PATTERN + ")"
-            + "|(?<STRING>" + STRING_PATTERN + ")"
-            + "|(?<COMMENT>" + COMMENT_PATTERN + ")"
+    private final Map<String, String> groupPatternMap = Map.ofEntries(
+        // Keywords set
+        entry("KEYWORD", format("\\b(%s)\\b", join("|", KEYWORDS))),
+        // String literals: "..." or "...\n or '...' or '...\n
+        entry("STRING", format("%s|%s", "\".*?[\"\\n]", "'.*?['\\n]")),
+        // Comments: //...\n or  /* ... */ or /* ... end file
+        entry("COMMENT", format("%s|%s", "//[^\n]*", "/\\*(.|\\R)*?(\\*/|\\z)"))
+        // () - parentheses set
+        // entry("PAREN", "[()]"),
+        // {} - curly braces set
+        // entry("BRACE", "[{}]"),
+        // [] - square brackets set
+        // entry("BRACKET", "[\\[\\]]")
     );
 
-    private static final String sampleCode = String.join("\n", new String[] {
-        "package com.example;",
-        "",
-        "import java.util.*;",
-        "",
-        "public class Foo extends Bar implements Baz {",
-        "",
-        "    /*",
-        "     * multi-line comment",
-        "     */",
-        "    public static void main(String[] args) {",
-        "        // single-line comment",
-        "        for(String arg: args) {",
-        "            if(arg.length() != 0)",
-        "                System.out.println(arg);",
-        "            else",
-        "                System.err.println(\"Warning: empty string as argument\");",
-        "        }",
-        "    }",
-        "",
-        "}"
-    });
+    // Merge all groups
+    private final Pattern pattern = Pattern.compile(
+        groupPatternMap.entrySet()
+            .stream().map(e -> format("(?<%s>%s)", e.getKey(), e.getValue()))
+            .collect(joining("|"))
+    );
+
+    private final String sampleCode =
+        "/*\n" +
+            "* multi-line comment\n" +
+            "*/\n" +
+            "function main () {\n" +
+            "    var a = 1\n" +
+            "    final b = a + 4\n" +
+            "    a ++\n" +
+            "    final text = 'Hello world'\n" +
+            "    // single-line comment\n" +
+            "    for (var i = 0; /* // test comment */ i < b; /* test comment */ i ++) /* test comment */ {\n" +
+            "        if (i < 3) {\n" +
+            "            println ('i < 3 -> ' + text)\n" +
+            "        }\n" +
+            "        else {\n" +
+            "            println (\"else -> \" + text)\n" +
+            "        }\n" +
+            "    }\n" +
+            "    \n" +
+            "    println (a typeof void)\n" +
+            "}\n" +
+            "\n" +
+            "function sum (a, b) {\n" +
+            "    return a + b\n" +
+            "}";
+
 
     private CodeArea codeArea;
 
@@ -105,7 +102,8 @@ public class AsyncSyntaxHighlighterImpl implements AsyncSyntaxHighlighter {
 
     private Subscription cleanupWhenDone;
 
-    public AsyncSyntaxHighlighterImpl(final CodeArea codeArea, final ExecutorService executorService) {
+    AsyncSyntaxHighlighterImpl(final CodeArea codeArea,
+                               final ExecutorService executorService) {
         this.codeArea = codeArea;
         this.executorService = executorService;
     }
@@ -113,17 +111,10 @@ public class AsyncSyntaxHighlighterImpl implements AsyncSyntaxHighlighter {
     @Override
     public void enable() {
         cleanupWhenDone = codeArea.multiPlainChanges()
-            .successionEnds(Duration.ofMillis(500))
+            .successionEnds(Duration.ofMillis(50))
             .supplyTask(this::computeHighlightingAsync)
             .awaitLatest(codeArea.multiPlainChanges())
-            .filterMap(t -> {
-                if (t.isSuccess()) {
-                    return Optional.of(t.get());
-                } else {
-                    t.getFailure().printStackTrace();
-                    return Optional.empty();
-                }
-            })
+            .filterMap(Try::toOptional)
             .subscribe(this::applyHighlighting);
         // FIXME remove
         codeArea.replaceText(0, 0, sampleCode);
@@ -140,42 +131,41 @@ public class AsyncSyntaxHighlighterImpl implements AsyncSyntaxHighlighter {
     }
 
     private Task<StyleSpans<Collection<String>>> computeHighlightingAsync() {
-        String text = codeArea.getText();
-        Task<StyleSpans<Collection<String>>> task = new Task<>() {
+        final Task<StyleSpans<Collection<String>>> task = new Task<>() {
             @Override
             protected StyleSpans<Collection<String>> call() {
-                return computeHighlighting(text);
+                return computeHighlighting(codeArea.getText());
             }
         };
         executorService.execute(task);
         return task;
     }
 
-    private void applyHighlighting(StyleSpans<Collection<String>> highlighting) {
+    private void applyHighlighting(final StyleSpans<Collection<String>> highlighting) {
         codeArea.setStyleSpans(0, highlighting);
     }
 
-    private StyleSpans<Collection<String>> computeHighlighting(String text) {
-        Matcher matcher = PATTERN.matcher(text);
+    private StyleSpans<Collection<String>> computeHighlighting(final String text) {
+        final Matcher matcher = pattern.matcher(text);
         int lastKwEnd = 0;
-        StyleSpansBuilder<Collection<String>> spansBuilder
-            = new StyleSpansBuilder<>();
+        final StyleSpansBuilder<Collection<String>> spansBuilder = new StyleSpansBuilder<>();
         while (matcher.find()) {
-            String styleClass =
-                matcher.group("KEYWORD") != null ? "keyword" :
-                    matcher.group("PAREN") != null ? "paren" :
-                        matcher.group("BRACE") != null ? "brace" :
-                            matcher.group("BRACKET") != null ? "bracket" :
-                                matcher.group("SEMICOLON") != null ? "semicolon" :
-                                    matcher.group("STRING") != null ? "string" :
-                                        matcher.group("COMMENT") != null ? "comment" :
-                                            null; /* never happens */
-            assert styleClass != null;
-            spansBuilder.add(Collections.emptyList(), matcher.start() - lastKwEnd);
-            spansBuilder.add(Collections.singleton(styleClass), matcher.end() - matcher.start());
+            final String styleClass = getStyleClass(matcher);
+            spansBuilder.add(List.of(), matcher.start() - lastKwEnd);
+            spansBuilder.add(List.of(styleClass), matcher.end() - matcher.start());
             lastKwEnd = matcher.end();
         }
-        spansBuilder.add(Collections.emptyList(), text.length() - lastKwEnd);
+        spansBuilder.add(List.of(), text.length() - lastKwEnd);
         return spansBuilder.create();
+    }
+
+    private String getStyleClass(final Matcher matcher) {
+        for (final String group : groupPatternMap.keySet()) {
+            if (matcher.group(group) != null) {
+                return group.toLowerCase();
+            }
+        }
+        throw new IllegalStateException(
+            "Impossible exception: at least one group should be found, because matcher.find() return true");
     }
 }
